# MicroGameEngineCMake

./: .gitignore  CMakeLists.txt  README.md
assets/mge/shaders/: color.fs  color.vs  texture.fs  texture.vs
src/: glm.hpp  main.cpp
src/mge/: MGEDemo.cpp  MGEDemo.hpp  config.hpp
src/mge/behaviours/: AbstractBehaviour.cpp  AbstractBehaviour.hpp  KeysBehaviour.cpp  KeysBehaviour.hpp  LookAt.cpp  LookAt.hpp  RotatingBehaviour.cpp  RotatingBehaviour.hpp
src/mge/core/: AbstractGame.cpp  AbstractGame.hpp  Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  World.cpp  World.hpp
src/mge/materials/: AbstractMaterial.cpp  AbstractMaterial.hpp  ColorMaterial.cpp  ColorMaterial.hpp  TextureMaterial.cpp  TextureMaterial.hpp
src/mge/util/: DebugHud.cpp  DebugHud.hpp
